DO/002-nginx-ingress[https-staging]/loadbalancer.yaml
kind: Service
apiVersion: v1
metadata:
  name: ingress-nginx
  namespace: ingress-nginx
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-protocol: "http"
#    service.beta.kubernetes.io/do-loadbalancer-redirect-http-to-https: "true"
    service.beta.kubernetes.io/do-loadbalancer-algorithm: "round_robin"
    service.beta.kubernetes.io/do-loadbalancer-tls-ports: "443"
    service.beta.kubernetes.io/do-loadbalancer-certificate-id: "52a471ca-9fc3-4f5e-a9f4-6e6bc56cac50"
spec:
  externalTrafficPolicy: Local
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
  ports:
    - name: http
      port: 80
#      targetPort: http
      targetPort: 80
    - name: https
      port: 443
#      targetPort: https
      targetPort: 80

---

# examples:
#     https://github.com/digitalocean/digitalocean-cloud-controller-manager/tree/master/docs/controllers/services/examples
# main doc: How to Add Load Balancers to Kubernetes Clusters
#     https://www.digitalocean.com/docs/kubernetes/how-to/add-load-balancers/
# main doc: How to Configure SSL Termination
#     https://www.digitalocean.com/docs/networking/load-balancers/how-to/ssl-termination/#add-an-ssl-certificate
